fix navbar z-index

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -9,5 +9,5 @@ body {
   
 #app-navbar{
     position: relative;
-    z-index: 1!important;
+    z-index: 2!important;
 }
